resource/theme/default/css/default.css
/* ... */
.smallPopup .mainBox{
	position: relative;
	height: auto;
	width: 420px;
	margin-top: 100px;
	margin-left: calc(50% - 210px);
	text-align:  justify;
	padding: 0px;
	background-color: #f9f9f9;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px ;
	border-radius: 3px ;
}

.smallPopup .mainBox .titleBox {
	height: 50px;
	background-color: #f9f9f9;
}

.smallPopup .mainBox .titleBox h2 {
	line-height: 50px;
	margin-left: 30px;
	margin-top: 10px;
}

#rememberme {
	padding-top: 3px;
}

.registerFormBox input#remembermeChk{
	content: '';

	-moz-appearance:none;
	-webkit-appearance:none;
	-o-appearance:none;

	margin-top: 5px;
	margin-left: 30px;


	width:16px;
	height:16px;
	vertical-align: middle;

	color: #999999;
	border:1px solid #aaaaaa;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px ;
	border-radius: 3px ;
	display: inline-block;
}


.registerFormBox input#remembermeChk + label {
	width:16px;
	height:16px;
	display: inline-block;
	margin-left: -18px;
	font-size: 18px;
}

.registerFormBox input#remembermeChk:checked + label:after {
	content: '\2714';
	color: rgb(0, 171, 230);
}

/*.registerFormBox input#remembermeChk:after {*/
	/*content: '\2714';*/
	/*font-size: 14px;*/
/*}*/

.registerFormBox #remembermeTx {
	margin-left: 12px;
	margin-top: 8px;
	display: inline-block;
	vertical-align: middle;
	line-height: 14px;
}

.smallPopup .mainBox .registerFormBox {
	font-size: 14px;
	padding-bottom: 22px;
	overflow: hidden;
}

.smallPopup .mainBox .registerFormBox label{
	margin-left: 30px;
	margin-bottom: 3px;
	color: #666666;
	display: block;
}

.smallPopup .mainBox .registerFormBox input:not([type='checkbox']){
	font-size: 14px;
	width: calc(100% - 72px);
	height:30px;
	margin-left: 30px;
	margin-bottom: 10px;
	padding-left:10px;
	display: block;
	border: 1px solid #aaaaaa;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px ;
	border-radius: 3px ;
}

.smallPopup .mainBox .registerFooter {
	border-top: 1px solid #dddddd;
	background-color: #eaeaea;
	-moz-border-radius: 0px;
	-webkit-border-radius:  0px 0px 3px 3px;
	border-radius:  0px 0px 3px 3px;
	padding-bottom: 30px;
}

.registerFooter ul{
	color: #666666;
	list-style-type: none;
	margin-left:30px;
	margin-top: 15px;
	font-size: 12px;
}

.registerFooter a {
	color: rgb(0, 171, 230);
}

.registerFooter a:hover {
	color: rgb(255, 51, 153);
}

.registerFooter button {
	margin-top: 15px;
}

.registerFooter .btn-submit {
	margin-left:30px;
}

.smallPopup .mainBox .colorBanner {
	border: 0px;
	-moz-border-radius: 0px;
	-webkit-border-radius: 3px 3px 0px 0px;
	border-radius: 3px 3px 0px 0px;
}

.smallPopup .mainBox .colorBanner table {
	border-collapse: separate;
	height: 2px;
	width: 100%;
	border: 0px;
	-moz-border-radius: 0px;
	-webkit-border-radius: 3px 3px 0px 0px;
	border-radius: 3px 3px 0px 0px;
}

.smallPopup .mainBox .colorBanner table tr td {
	width: 25%;
}

.smallPopup .mainBox .colorBanner table tr td:nth-child(1) {
	background-color: rgb(255, 51, 153);
	border-top-left-radius: 3px;
}

.smallPopup .mainBox .colorBanner table tr td:nth-child(2) {
	background-color: rgb(243, 120, 52);
}

.smallPopup .mainBox .colorBanner table tr td:nth-child(3) {
	background-color: rgb(119, 184, 39);
}

.smallPopup .mainBox .colorBanner table tr td:nth-child(4) {
	background-color: rgb(0, 171, 230);
	border-top-right-radius: 3px;
}

#popImgBox{
	position: relative;
	-moz-border-radius: 0px;
	-webkit-border-radius: 3px 3px 0px 0px;
	border-radius: 3px 3px 0px 0px; 
	z-index: 610;
}

#popImgText{
	-moz-border-radius: 0px;
	-webkit-border-radius: 0px 0px 3px 3px ;
	border-radius: 0px 0px 3px 3px ; 
	margin-bottom: 50px;
}

#popImgDescription{
	margin-top: 20px;
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px ;
	border-radius: 3px ; 
}

@media only screen and (max-width: 1280px) {
	.popupImg{
		width: 900px;
		margin-left: calc(50% - 480px);
	}


}


@media only screen and (max-width: 1024px) {
	.popupImg{
		width: calc(100% - 160px);
		margin-left: 50px;
	}

}

@media only screen and (max-width: 768px) {
	.popupImg{
		width: calc(100% - 130px);
		margin-left: 35px;
	}


}

@media only screen and (max-width: 512px) {
	.popupImg{
		width: calc(100% - 100px);
		margin-left: 20px;
	}

	.smallPopup .mainBox{
		margin-top: 50px;
	}
}



@media only screen and (max-width: 420px) {
	.popupImg{
		width: calc(100% - 66px);
		margin-left: 0px;
	}

	.smallPopup .mainBox{
		width: 100%;
		margin-top: 0px;
		margin-left: 0px;
	}
}

/* popup end*/

/* header nav start*/

.headerNav {
	margin-left: 7%;
	width: 86%;
	color: #ffffff;
	font-size: 22px;
	height: 50px;
	line-height: 50px;
	position: fixed;
	z-index: 500;
}

.bigLogo {
	margin: 0px 20px 0px 20px;
}

.loginBtn, .signupBtn {
	cursor: pointer;
	float: right;
}
.loginBtn, .signupBtn {
	padding-left: 15px;
	padding-right: 15px;
}

.loginBtn:hover {
	color: rgb(0, 171, 230);
}

.signupBtn:hover{
	color: rgb(255, 51, 153);
}

@media only screen and (max-width: 400px) {
	.headerNav span {
		margin: 0px 10px 0px 10px;
	}

}

@media only screen and (max-width: 1024px) {
	.headerNav {
		width: 100%;
		margin-left: 0px;
	}

}

.headerNavBackground {
	opacity: 0.9;
	background-color: #222;
	width: 100%;
	height: 50px;
	position: fixed;
	left: 0px;
	top: 0px;
	z-index: 499;
}

/* header nav end*/

/* poster start*/

.poster {
	/*background-image: url("../img/header.jpg");*/
	background-image: url("../img/8206-8.jpg");
	background-repeat: no-repeat;
	height: 620px;
	width: 100%;
}

/* poster end*/



/* text container section start*/
.fake_textSection {
	opacity: 0;
	position: absolute;
	text-align: center;
	height: 50px;
	width: 84%;
	margin-left: 7%;
	top: 0px;
}

.textSection {
	position: absolute;
	text-align: center;
	height: auto;
	width: 100%;
	margin-left: 7%;
	top: 640px;
	padding-bottom: 70px;
}

.textSection .large {
	width: calc(100% - 40px);
	margin: 0px 20px 0px 20px;
	font-size: 33px;
	line-height: 50px;
}
/* ... */

